# PacerAI-coach

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  users.json.example
.claude/commands/: garmin-cli.md
.cursor/skills/garmin-cli/: SKILL.md
.cursor/skills/pacerai-coaching/: SKILL.md
.github/workflows/: ci.yml
coaching/: COACHING_PLAN.md  NUTRITION_COACHING_PLAN.md  SKILL.md
coaching/books/: 4_hour_body.md  8020.md  atomic_habits.md  burn.md  daniels.md  endurance_diet.md  good_energy.md  hansons.md  lean_muscle_diet.md  nonrunner.md  nutrition_concepts.md  pfitzinger.md  racing_weight.md  run_less.md
coaching/research/: aerobic_fuel_use.md  biomechanics_injuries.md  caloric_balance.md  carb_periodization.md  deficit_and_performance.md  macronutrients.md  micronutrients.md  physiology.md  psychology_second_marathon.md  sleep_analysis.md  stress_cortisol_plateau.md  workout_nutrition_timing.md  zone2_fat_loss.md
coaching/skills/: athlete_assessment.md  behavior_change_coaching.md  client_intake_form.md  eating_systems.md  family_meal_prep.md  garmin_sleep_analysis.md  injury_triage.md  non_athlete_comms.md  pace_calculator.md  parent_challenges.md  race_strategy.md  training_plan_builder.md  weekly_checkin.md  weekly_checkin_template.md
pacerai/: auth.py  cli.py  keychain.py  login_server.py
tests/: test_activity.py  test_auth.py  test_keychain.py  test_pace.py  test_workout.py
