[project]
name = "pacerai"
version = "0.1.0"
description = "AI-friendly Garmin Connect CLI and marathon coaching toolkit"
readme = "README.md"
requires-python = "^3.14"
dependencies = [
    "garminconnect[workout] (>=0.2.40,<0.3.0)"
]

[project.scripts]
pacerai = "pacerai.cli:main"

[tool.poetry]
packages = [{include = "pacerai"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
