[project]
name = "pacerai"
version = "0.1.0"
description = "AI-friendly Garmin Connect CLI and marathon coaching toolkit"
readme = "README.md"
requires-python = "^3.14"
dependencies = [
    "garminconnect[workout] (>=0.2.40,<0.3.0)",
    "mcp (>=1.27.0,<2.0.0)"
]

[project.scripts]
pacerai = "pacerai.cli:main"

[tool.poetry]
packages = [{include = "pacerai"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["pacerai"]
omit = ["pacerai/login_server.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
